Revision history for Perl-PrereqScanner

{{$NEXT}}

1.001     2011-01-05 16:35:26 Europe/Paris
 - fix bin/prereqs (randy stauner)

1.000     2010-12-06 17:54:20 Europe/Paris
 - fix rt#59016 - support for moose 1.03 version declarations (apocalypse)

0.101892  2010-12-03 17:15:25 Europe/Paris
 - throw an exception if PPI fails to parse code (vyacheslav matjukhin)

0.101891  2010-09-05 15:31:49 America/New_York
 - add a core scanner for Test::More's done_testing
 - do not detect prereqs for invalid class names in Moose scanner
 - added TODO tests for "with('Name')" -- note the parens

0.101890  2010-07-08 18:45:57 Europe/Paris
 - fix rt#59121 - remove lurking temp files

0.101480  2010-05-28 08:41:56 America/New_York
 - bump prereq version of String::RewritePrefix

0.101250  2010-05-05 09:32:19 America/New_York
 - convert to Moose object system
 - add the Scanner role and pluggable scanners

0.100960  2010-04-06 17:03:46 Europe/Paris
 - add 'feature' pragma to skip list (mark gardner)
 - added some tests (mark gardner)

0.100830  2010-03-24 13:37:31 Europe/Paris
 - fix rt#55713: support for use parent -norequire
 - fix rt#55851: 'require $foo;' shouldn't add any prereq

0.100690  2010-03-10 21:06:49 America/New_York
 - remove another 5.10-ism

0.100680  2010-03-09 19:10:27 America/New_York
 - fix PPI version required (thanks, Christopher J. Madsen)

0.100630  2010-03-04 22:58:55 America/New_York
 - work on perl 5.8
 - require a newer Version::Requirements with critical bugfix

0.100521  2010-02-21 23:20:55 America/New_York
 - scanning methods now return Version::Requirements objects

0.100520  2010-02-21 15:55:31 America/New_York
 - add perl prereq to Makefile.PL to stop test failures

0.100510  2010-02-20 17:38:59 America/New_York
 - typo fixes (ricardo signes)
 - new script scan_prereqs
 - prereq accounting now managed by Version::Requirements
 - easier-to-link-to Pod

0.100491  2010-02-18 19:16:15 Europe/Paris
 - added a changelog (this file)
